Document Java 21 migration implementation (Spec Kit) (003)
Add implementation-report.md consolidating what was implemented and verified
(compile + 136 engine tests + real E01 forensic run), the runtime issues found
and fixed (SecurityManager, jar-plugin packaging, embedded JRE, .exe launchers,
StartUpControl, FST), deferred modernizations (Lucene/BC/Tika), and remaining
work (JRE artifact publish, launcher rebuild, numpy, Neo4j 5 graph runtime,
formal parity, docs).

Update quickstart.md with how to run the release on Java 21 today (iped.bat +
bundled JRE swap + -Djava.security.manager=allow) and the 2026-05-30 validation
results. Add report pointers from tasks.md and plan.md.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>